# TDC

./: environment.yml  pyproject.toml  requirements.txt  setup.py
tdc/: cli.py  oracles.py
tdc/chem_utils/oracle/: oracle.py
tdc/utils/: load.py
